downgrade jdk version to 1.7 and support android 7.x